handle the profile , notification , Recipient ,support and navbar on mobile

--- a/app/shared/localization/messages/ar.json
+++ b/app/shared/localization/messages/ar.json
@@ -23,5 +23,177 @@
         "notifications_desc": "الذهاب إلى التنبيهات",
         "support_desc": "الذهاب إلى الدعم",
         "profile_desc": "الذهاب إلى الملف الشخصي"
+    },
+    "Profile": {
+        "title": "الملف الشخصي",
+        "back": "رجوع",
+        "memberSince": "عضو منذ",
+        "points": "النقاط",
+        "orders": "الطلبات",
+        "saved": "المحفوظ",
+        "account": "الحساب",
+        "preferences": "التفضيلات",
+        "support": "الدعم",
+        "recipientProfiles": "ملفات المستلمين",
+        "recipientProfilesDesc": "إدارة أفراد العائلة",
+        "purchaseHistory": "سجل المشتريات",
+        "purchaseHistoryDesc": "12 طلب",
+        "walletCashback": "المحفظة والاسترجاع",
+        "walletCashbackDesc": "رصيد 450 ريال",
+        "myCoupons": "كوبوناتي",
+        "myCouponsDesc": "5 كوبونات نشطة",
+        "notifications": "التنبيهات",
+        "notificationsDesc": "إدارة التنبيهات",
+        "appSettings": "إعدادات التطبيق",
+        "appSettingsDesc": "اللغة، المظهر",
+        "privacySecurity": "الخصوصية والأمان",
+        "privacySecurityDesc": "إدارة بياناتك",
+        "helpCenter": "مركز المساعدة",
+        "helpCenterDesc": "الأسئلة الشائعة والأدلة",
+        "contactSupport": "اتصل بالدعم",
+        "contactSupportDesc": "تحدث معنا",
+        "logout": "تسجيل الخروج"
+    },
+    "Privacy": {
+        "title": "سياسة الخصوصية والأمان",
+        "subtitle": "خصوصيتك وأمانك هي أولوياتنا القصوى",
+        "back": "رجوع",
+        "introduction": "مرحباً بك في دروبي! توضح سياسة الخصوصية والأمان هذه كيفية جمع معلوماتك الشخصية واستخدامها وحمايتها ومشاركتها على منصة مقارنة التسوق المدعومة بالذكاء الاصطناعي.",
+        "introduction2": "نحن ملتزمون بحماية خصوصيتك وضمان أمان بياناتك وفقاً لقوانين حماية البيانات السعودية ودول مجلس التعاون الخليجي.",
+        "contactEmail": "privacy@drooby.com",
+        "location": "الرياض، المملكة العربية السعودية",
+        "privacyPolicyTitle": "سياسة الخصوصية",
+        "informationWeCollect": "المعلومات التي نجمعها",
+        "informationWeCollectContent": "نجمع المعلومات التي تقدمها لنا مباشرة، مثل عند إنشاء حساب أو إجراء عملية شراء أو الاتصال بنا. يتضمن ذلك اسمك وعنوان بريدك الإلكتروني ورقم هاتفك وعنوان الشحن ومعلومات الدفع. كما نجمع المعلومات تلقائياً عند استخدامك لمنصتنا، بما في ذلك معلومات الجهاز وعنوان IP ونوع المتصفح وبيانات الاستخدام.",
+        "howWeUseYourInformation": "كيف نستخدم معلوماتك",
+        "howWeUseYourInformationContent": "نستخدم معلوماتك لتوفير خدماتنا وصيانتها وتحسينها، ومعالجة المعاملات، وإرسال تحديثات حول طلباتك، والرد على استفساراتك، وتخصيص تجربتك، وإرسال رسائل تسويقية (بموافقتك). كما نستخدم معلوماتك لأغراض أمنية والامتثال للالتزامات القانونية.",
+        "dataSharingDisclosure": "مشاركة البيانات والإفصاح",
+        "dataSharingDisclosureContent": "قد نشارك معلوماتك مع شركاء موثوقين ومقدمي خدمات يساعدوننا في تشغيل منصتنا ومعالجة المدفوعات وتسليم المنتجات. نحن لا نبيع معلوماتك الشخصية. قد نكشف عن معلوماتك إذا طُلب منا ذلك بموجب القانون أو لحماية حقوقنا وسلامة مستخدمينا.",
+        "yourRightsChoices": "حقوقك وخياراتك",
+        "yourRightsChoicesContent": "لديك الحق في الوصول إلى معلوماتك الشخصية أو تحديثها أو حذفها. يمكنك إدارة إعدادات الخصوصية في حسابك، وإلغاء الاشتراك في الرسائل التسويقية، وطلب نسخة من بياناتك. لديك أيضاً الحق في الاعتراض على أنشطة معالجة معينة وتقديم شكوى إلى سلطة حماية البيانات ذات الصلة.",
+        "dataSecurity": "أمان البيانات",
+        "dataSecurityContent": "نطبق تدابير أمنية معيارية في الصناعة لحماية معلوماتك الشخصية، بما في ذلك التشفير والخوادم الآمنة والتدقيقات الأمنية المنتظمة. ومع ذلك، لا توجد طريقة نقل عبر الإنترنت آمنة بنسبة 100%، ولا يمكننا ضمان الأمان المطلق.",
+        "dataRetention": "الاحتفاظ بالبيانات",
+        "dataRetentionContent": "نحتفظ بمعلوماتك الشخصية طالما كان ذلك ضرورياً لتوفير خدماتنا والامتثال للالتزامات القانونية وحل النزاعات وإنفاذ اتفاقياتنا. عندما لا نحتاج بعد الآن إلى معلوماتك، سنقوم بحذفها أو إخفاء هويتها بشكل آمن.",
+        "securityPoliciesTitle": "سياسات الأمان",
+        "accountSecurityBestPractices": "أفضل ممارسات أمان الحساب",
+        "accountSecurity1": "استخدم كلمة مرور قوية وفريدة لحسابك",
+        "accountSecurity2": "لا تشارك أبداً بيانات تسجيل الدخول الخاصة بك مع أي شخص",
+        "accountSecurity3": "قم بتمكين المصادقة الثنائية عند توفرها",
+        "accountSecurity4": "راجع بانتظام جلساتك النشطة وسجل الخروج من الأجهزة غير المستخدمة",
+        "accountSecurity5": "كن حذراً من محاولات التصيد والرسائل الإلكترونية المشبوهة",
+        "accountSecurity6": "احتفظ بمعلومات الاتصال الخاصة بك محدثة للإشعارات الأمنية",
+        "safeShoppingGuidelines": "إرشادات التسوق الآمن",
+        "safeShopping1": "تحقق من أنك تتسوق في متجر شريك دروبي الرسمي",
+        "safeShopping2": "تحقق من مؤشرات الاتصال الآمن (HTTPS وأيقونة القفل)",
+        "safeShopping3": "راجع تقييمات البائع والمنتج قبل إجراء عملية شراء",
+        "safeShopping4": "استخدم طرق الدفع الآمنة وتجنب مشاركة تفاصيل الدفع عبر البريد الإلكتروني",
+        "safeShopping5": "احتفظ بسجلات معاملاتك وتأكيدات الطلبات",
+        "safeShopping6": "أبلغ فوراً عن أي نشاط مشبوه أو معاملات غير مصرح بها",
+        "cookiePolicyTitle": "سياسة ملفات تعريف الارتباط",
+        "howWeUseCookies": "كيف نستخدم ملفات تعريف الارتباط",
+        "howWeUseCookiesContent": "يستخدم دروبي ملفات تعريف الارتباط وتقنيات التتبع المماثلة لتحسين تجربة المستخدم وتذكر تفضيلاتك وتحليل كيفية استخدامك لمنصتنا. ملفات تعريف الارتباط هي ملفات نصية صغيرة تساعدنا في توفير توصيات مخصصة وتحسين خدماتنا.",
+        "essentialCookies": "ملفات تعريف الارتباط الأساسية",
+        "essentialCookiesDesc": "مطلوبة لوظائف الموقع الأساسية والمصادقة والأمان. لا يمكن تعطيلها.",
+        "performanceCookies": "ملفات تعريف الارتباط للأداء",
+        "performanceCookiesDesc": "تساعدنا في فهم كيفية تفاعلك مع منصتنا لتحسين الأداء وتجربة المستخدم.",
+        "marketingCookies": "ملفات تعريف الارتباط التسويقية",
+        "marketingCookiesDesc": "تُستخدم لتقديم إعلانات ذات صلة وتتبع فعالية الحملات. يمكنك إلغاء الاشتراك في هذه.",
+        "complianceRegulationsTitle": "الامتثال واللوائح",
+        "sdaia": "هيئة البيانات والذكاء الاصطناعي السعودية (سدايا)",
+        "sdaiaContent": "يتوافق دروبي مع قانون حماية البيانات الشخصية (PDPL) في المملكة العربية السعودية واللوائح التي وضعتها هيئة البيانات والذكاء الاصطناعي السعودية (سدايا).",
+        "GCCDataProtectionTitle": "حماية البيانات في مجلس التعاون الخليجي",
+        "gccDataProtection": "نلتزم بمعايير حماية البيانات في جميع أنحاء دول مجلس التعاون الخليجي.",
+        "internationalStandardsTitle": "المعايير الدولية",
+        "internationalStandards": "تتماشى ممارساتنا مع معايير الخصوصية الدولية، بما في ذلك مبادئ اللائحة العامة لحماية البيانات (GDPR).",
+        "questionsTitle": "أسئلة حول الخصوصية؟",
+        "questionsDescription": "إذا كان لديك أي أسئلة حول سياسة الخصوصية والأمان هذه أو كيفية تعاملنا مع بياناتك، يرجى الاتصال بفريق الخصوصية لدينا."
+    },
+    "HelpCenter": {
+        "title": "مركز المساعدة",
+        "back": "رجوع",
+        "subtitle": "ابحث عن إجابات للأسئلة الشائعة حول دروبي.",
+        "searchPlaceholder": "ابحث عن المساعدة...",
+        "browseByCategory": "تصفح حسب الفئة",
+        "categoryGeneral": "عام",
+        "categoryWallet": "المحفظة والنقاط",
+        "categoryShopping": "التسوق والمقارنة",
+        "categoryCoupons": "الكوبونات والعروض",
+        "categoryAccount": "الحساب والخصوصية",
+        "frequentlyAskedQuestions": "الأسئلة الشائعة",
+        "faq1": "ما هو دروبي وكيف يعمل؟",
+        "faq1Answer": "دروبي هو منصة مقارنة تسوق مدعومة بالذكاء الاصطناعي تساعدك في العثور على أفضل الأسعار والعروض من متاجر متعددة. ببساطة ابحث عن منتج، وسيعرض لك دروبي الأسعار من تجار التجزئة المختلفين، مما يساعدك على توفير المال واتخاذ قرارات شراء مستنيرة.",
+        "faq2": "ما هي المتاجر التي يدعمها دروبي؟",
+        "faq2Answer": "يدعم دروبي مجموعة واسعة من المتاجر والتجار عبر الإنترنت. نضيف باستمرار متاجر جديدة إلى منصتنا لتزويدك بخيارات أكثر. يمكنك رؤية قائمة المتاجر المدعومة في التطبيق أو على موقعنا الإلكتروني.",
+        "faq3": "هل دروبي مجاني للاستخدام؟",
+        "faq3Answer": "نعم، دروبي مجاني تماماً للاستخدام. لا توجد رسوم اشتراك أو رسوم مخفية. نحصل على الإيرادات من خلال الشراكات مع تجار التجزئة، مما يسمح لنا بتقديم هذه الخدمة بدون تكلفة عليك.",
+        "faq4": "كيف أكسب النقاط؟",
+        "faq4Answer": "يمكنك كسب النقاط من خلال إجراء عمليات شراء عبر دروبي، وإحالة الأصدقاء، وإكمال المهام، والمشاركة في العروض الترويجية الخاصة. يمكن استبدال النقاط بالاسترجاع النقدي والخصومات ومكافآت أخرى.",
+        "faq5": "كيف يمكنني استبدال نقاطي؟",
+        "faq5Answer": "يمكنك استبدال نقاطك من خلال قسم المحفظة في ملفك الشخصي. يمكن تحويل النقاط إلى استرجاع نقدي، أو استخدامها للحصول على خصومات على المشتريات، أو استبدالها بكوبونات وعروض خاصة.",
+        "faq6": "هل تنتهي صلاحية نقاطي؟",
+        "faq6Answer": "تنتهي صلاحية النقاط عادة بعد 12 شهراً من عدم النشاط. ومع ذلك، طالما أنك تستمر في استخدام دروبي وكسب أو استبدال النقاط، فستبقى نقاطك نشطة. سنخطرك قبل انتهاء صلاحية نقاطك.",
+        "faq7": "هل يمكنني نقل النقاط إلى مستخدم آخر؟",
+        "faq7Answer": "حالياً، النقاط غير قابلة للنقل بين الحسابات. النقاط مرتبطة بحسابك ولا يمكن مشاركتها أو نقلها إلى مستخدمين آخرين.",
+        "faq8": "ما مدى دقة مقارنات الأسعار؟",
+        "faq8Answer": "نسعى جاهدين لتوفير معلومات الأسعار الأكثر دقة وحداثة. يقوم نظامنا بتحديث الأسعار بانتظام من المتاجر الشريكة. ومع ذلك، قد تتغير الأسعار بسرعة، لذا نوصي بالتحقق من السعر النهائي على موقع التاجر قبل إجراء عملية شراء.",
+        "faq9": "هل يمكنني الشراء مباشرة عبر دروبي؟",
+        "faq9Answer": "دروبي هو منصة مقارنة تعيد توجيهك إلى موقع التاجر لإكمال عملية الشراء. نحن لا نعالج المدفوعات مباشرة، لكننا نتتبع مشترياتك لضمان حصولك على نقاطك والاسترجاع النقدي.",
+        "faq10": "كيف يعمل محادثة الذكاء الاصطناعي للمقارنة؟",
+        "faq10Answer": "تتيح لك ميزة محادثة الذكاء الاصطناعي لدينا طرح أسئلة حول المنتجات ومقارنة الخيارات والحصول على توصيات مخصصة. ببساطة اكتب سؤالك، وسيوفر لك الذكاء الاصطناعي مقارنات وتوصيات مفصلة بناءً على تفضيلاتك.",
+        "faq11": "كيف أستخدم الكوبونات؟",
+        "faq11Answer": "يمكنك العثور على الكوبونات المتاحة في قسم الكوبونات. انقر على كوبون لعرض تفاصيله وشروطه. عندما تكون مستعداً لاستخدامه، انقر على 'تطبيق' وسيتم إعادة توجيهك إلى المتجر مع تطبيق رمز الكوبون تلقائياً.",
+        "faq12": "هل يمكنني استخدام عدة كوبونات في عملية شراء واحدة؟",
+        "faq12Answer": "هذا يعتمد على سياسة المتجر. بعض المتاجر تسمح بدمج عدة كوبونات، بينما يقبل البعض الآخر كوبوناً واحداً فقط لكل معاملة. تحقق من شروط وأحكام الكوبون للحصول على تفاصيل محددة.",
+        "faq13": "ماذا لو لم يعمل الكوبون الخاص بي؟",
+        "faq13Answer": "إذا لم يعمل الكوبون، يرجى التحقق من أنه لم ينتهِ، ويستوفي الحد الأدنى لمتطلبات الشراء، وصالح للعناصر في سلة التسوق الخاصة بك. إذا استمرت المشكلة، اتصل بفريق الدعم لدينا للحصول على المساعدة.",
+        "faq14": "هل معلوماتي الشخصية آمنة؟",
+        "faq14Answer": "نعم، نحن نأخذ خصوصيتك وأمانك على محمل الجد. نستخدم التشفير وتدابير الأمان المعيارية في الصناعة لحماية بياناتك. لمزيد من التفاصيل، يرجى مراجعة سياسة الخصوصية والأمان في إعدادات ملفك الشخصي.",
+        "faq15": "كيف أحذف حسابي؟",
+        "faq15Answer": "لحذف حسابك، انتقل إلى الملف الشخصي > الخصوصية والأمان، وستجد خيار حذف حسابك. يرجى ملاحظة أن هذا الإجراء دائم ولا يمكن التراجع عنه. سيتم حذف جميع بياناتك ونقاطك وسجل المشتريات.",
+        "faq16": "هل يمكنني تغيير بريدي الإلكتروني أو رقم هاتفي المسجل؟",
+        "faq16Answer": "نعم، يمكنك تحديث بريدك الإلكتروني ورقم هاتفك في إعدادات ملفك الشخصي. انتقل إلى الملف الشخصي > إعدادات الحساب لإجراء هذه التغييرات. قد تحتاج إلى التحقق من بريدك الإلكتروني أو رقم هاتفك الجديد لأغراض أمنية.",
+        "stillNeedHelp": "ما زلت بحاجة إلى المساعدة؟",
+        "stillNeedHelpDesc": "فريق الدعم لدينا هنا لمساعدتك.",
+        "contactLiveChat": "الدردشة المباشرة",
+        "contactLiveChatDesc": "تحدث مع فريق الدعم لدينا",
+        "contactLiveChatAction": "بدء المحادثة",
+        "contactEmail": "دعم البريد الإلكتروني",
+        "contactEmailDesc": "support@drooby.com",
+        "contactEmailAction": "إرسال بريد إلكتروني",
+        "contactPhone": "دعم الهاتف",
+        "contactPhoneDesc": "+966 XX XXX XXXX",
+        "contactPhoneAction": "اتصل الآن"
+    },
+    "SupportChat": {
+        "title": "دردشة الدعم",
+        "back": "رجوع",
+        "agentName": "سارة",
+        "online": "متصل",
+        "welcomeMessage": "مرحباً! أنا سارة من دعم دروبي. كيف يمكنني مساعدتك اليوم؟",
+        "quickActions": "إجراءات سريعة",
+        "quickActionTrackOrder": "تتبع طلبي",
+        "quickActionCashbackIssue": "مشكلة في الاسترجاع النقدي",
+        "quickActionCouponNotWorking": "الكوبون لا يعمل",
+        "quickActionStoreInquiry": "استفسار عن المتجر",
+        "infoBanner": "لدى الدعم إمكانية الوصول إلى سجل طلباتك وتفضيلاتك",
+        "inputPlaceholder": "اكتب رسالتك...",
+        "attachFile": "إرفاق ملف",
+        "send": "إرسال"
+    },
+    "Notifications": {
+        "title": "التنبيهات",
+        "back": "رجوع",
+        "unread": "غير مقروء",
+        "settings": "الإعدادات",
+        "markAllAsRead": "تعليم الكل كمقروء",
+        "filterAll": "الكل",
+        "filterPriceDrops": "انخفاض الأسعار",
+        "filterStock": "المخزون",
+        "filterCashback": "الاسترجاع النقدي",
+        "filterCoupons": "الكوبونات",
+        "noNotifications": "لا توجد تنبيهات",
+        "atStore": "في",
+        "code": "الكود"
     }
 }
