--- a/app/shared/localization/messages/en.json
+++ b/app/shared/localization/messages/en.json
@@ -23,5 +23,177 @@
         "notifications_desc": "Go to notifications page",
         "support_desc": "Go to support page",
         "profile_desc": "Go to profile page"
+    },
+    "Profile": {
+        "title": "Profile",
+        "back": "Back",
+        "memberSince": "Member since",
+        "points": "Points",
+        "orders": "Orders",
+        "saved": "Saved",
+        "account": "Account",
+        "preferences": "Preferences",
+        "support": "Support",
+        "recipientProfiles": "Recipient Profiles",
+        "recipientProfilesDesc": "Manage family members",
+        "purchaseHistory": "Purchase History",
+        "purchaseHistoryDesc": "12 orders",
+        "walletCashback": "Wallet & Cashback",
+        "walletCashbackDesc": "450 SAR balance",
+        "myCoupons": "My Coupons",
+        "myCouponsDesc": "5 active coupons",
+        "notifications": "Notifications",
+        "notificationsDesc": "Manage alerts",
+        "appSettings": "App Settings",
+        "appSettingsDesc": "Language, theme",
+        "privacySecurity": "Privacy & Security",
+        "privacySecurityDesc": "Manage your data",
+        "helpCenter": "Help Center",
+        "helpCenterDesc": "FAQs & guides",
+        "contactSupport": "Contact Support",
+        "contactSupportDesc": "Chat with us",
+        "logout": "Logout"
+    },
+    "Privacy": {
+        "title": "Privacy & Security Policy",
+        "subtitle": "Your privacy and security are our top priorities",
+        "back": "Back",
+        "introduction": "Welcome to Drooby. This Privacy & Security Policy explains how we collect, use, protect, and share your personal information when you use our AI-powered shopping comparison platform. We are committed to protecting your privacy and ensuring the security of your data in compliance with Saudi Arabian and GCC data protection regulations.",
+        "introduction2": "By using Drooby, you agree to the collection and use of information in accordance with this policy. If you have any questions or concerns, please contact us at",
+        "contactEmail": "privacy@drooby.com",
+        "location": "Riyadh, Saudi Arabia",
+        "privacyPolicyTitle": "Privacy Policy",
+        "informationWeCollect": "Information We Collect",
+        "informationWeCollectContent": "We collect information that you provide directly to us, such as when you create an account, make a purchase, or contact us. This includes your name, email address, phone number, shipping address, and payment information. We also collect information automatically when you use our platform, including device information, IP address, browser type, and usage data.",
+        "howWeUseYourInformation": "How We Use Your Information",
+        "howWeUseYourInformationContent": "We use your information to provide, maintain, and improve our services, process transactions, send you updates about your orders, respond to your inquiries, personalize your experience, and send you marketing communications (with your consent). We also use your information for security purposes and to comply with legal obligations.",
+        "dataSharingDisclosure": "Data Sharing & Disclosure",
+        "dataSharingDisclosureContent": "We may share your information with trusted partners and service providers who assist us in operating our platform, processing payments, and delivering products. We do not sell your personal information. We may disclose your information if required by law or to protect our rights and the safety of our users.",
+        "yourRightsChoices": "Your Rights & Choices",
+        "yourRightsChoicesContent": "You have the right to access, update, or delete your personal information. You can manage your privacy settings in your account, opt-out of marketing communications, and request a copy of your data. You also have the right to object to certain processing activities and to file a complaint with the relevant data protection authority.",
+        "dataSecurity": "Data Security",
+        "dataSecurityContent": "We implement industry-standard security measures to protect your personal information, including encryption, secure servers, and regular security audits. However, no method of transmission over the internet is 100% secure, and we cannot guarantee absolute security.",
+        "dataRetention": "Data Retention",
+        "dataRetentionContent": "We retain your personal information for as long as necessary to provide our services, comply with legal obligations, resolve disputes, and enforce our agreements. When we no longer need your information, we will securely delete or anonymize it.",
+        "securityPoliciesTitle": "Security Policies",
+        "accountSecurityBestPractices": "Account Security Best Practices",
+        "accountSecurity1": "Use a strong, unique password for your account",
+        "accountSecurity2": "Never share your login credentials with anyone",
+        "accountSecurity3": "Enable two-factor authentication when available",
+        "accountSecurity4": "Regularly review your active sessions and log out from unused devices",
+        "accountSecurity5": "Be cautious of phishing attempts and suspicious emails",
+        "accountSecurity6": "Keep your contact information up-to-date for security notifications",
+        "safeShoppingGuidelines": "Safe Shopping Guidelines",
+        "safeShopping1": "Verify that you're shopping on the official Drooby partner store",
+        "safeShopping2": "Check for secure connection indicators (HTTPS and padlock icon)",
+        "safeShopping3": "Review seller and product ratings before making a purchase",
+        "safeShopping4": "Use secure payment methods and avoid sharing payment details via email",
+        "safeShopping5": "Keep records of your transactions and order confirmations",
+        "safeShopping6": "Report any suspicious activity or unauthorized transactions immediately",
+        "cookiePolicyTitle": "Cookie Policy",
+        "howWeUseCookies": "How We Use Cookies",
+        "howWeUseCookiesContent": "Drooby uses cookies and similar tracking technologies to enhance your user experience, remember your preferences, and analyze how you use our platform. Cookies are small text files that help us provide personalized recommendations and improve our services.",
+        "essentialCookies": "Essential Cookies",
+        "essentialCookiesDesc": "Required for basic site functionality, authentication, and security. These cannot be disabled.",
+        "performanceCookies": "Performance Cookies",
+        "performanceCookiesDesc": "Help us understand how you interact with our platform to improve performance and user experience.",
+        "marketingCookies": "Marketing Cookies",
+        "marketingCookiesDesc": "Used to deliver relevant advertisements and track campaign effectiveness. You can opt-out of these.",
+        "complianceRegulationsTitle": "Compliance & Regulations",
+        "sdaia": "Saudi Data & AI Authority (SDAIA)",
+        "sdaiaContent": "Drooby complies with the Personal Data Protection Law (PDPL) of Saudi Arabia and regulations set by SDAIA.",
+        "GCCDataProtectionTitle": "GCC Data Protection",
+        "gccDataProtection": "We adhere to data protection standards across GCC countries.",
+        "internationalStandardsTitle": "International Standards",
+        "internationalStandards": "Our practices align with international privacy standards, including GDPR principles.",
+        "questionsTitle": "Questions About Privacy?",
+        "questionsDescription": "If you have any questions about this Privacy & Security Policy or how we handle your data, please contact our Privacy Team."
+    },
+    "HelpCenter": {
+        "title": "Help Center",
+        "back": "Back",
+        "subtitle": "Find answers to commonly asked questions about Drooby.",
+        "searchPlaceholder": "Search for help...",
+        "browseByCategory": "Browse by Category",
+        "categoryGeneral": "General",
+        "categoryWallet": "Wallet & Points",
+        "categoryShopping": "Shopping & Comparison",
+        "categoryCoupons": "Coupons & Offers",
+        "categoryAccount": "Account & Privacy",
+        "frequentlyAskedQuestions": "Frequently Asked Questions",
+        "faq1": "What is Drooby and how does it work?",
+        "faq1Answer": "Drooby is an AI-powered shopping comparison platform that helps you find the best prices and deals across multiple stores. Simply search for a product, and Drooby will show you prices from various retailers, helping you save money and make informed purchasing decisions.",
+        "faq2": "Which stores does Drooby support?",
+        "faq2Answer": "Drooby supports a wide range of popular online stores and retailers. We continuously add new stores to our platform to provide you with more options. You can see the list of supported stores in the app or on our website.",
+        "faq3": "Is Drooby free to use?",
+        "faq3Answer": "Yes, Drooby is completely free to use. There are no subscription fees or hidden charges. We earn revenue through partnerships with retailers, which allows us to offer this service at no cost to you.",
+        "faq4": "How do I earn points?",
+        "faq4Answer": "You can earn points by making purchases through Drooby, referring friends, completing tasks, and participating in special promotions. Points can be redeemed for cashback, discounts, and other rewards.",
+        "faq5": "How can I redeem my points?",
+        "faq5Answer": "You can redeem your points through the Wallet section in your profile. Points can be converted to cashback, used for discounts on purchases, or exchanged for coupons and special offers.",
+        "faq6": "Do my points expire?",
+        "faq6Answer": "Points typically expire after 12 months of inactivity. However, as long as you continue to use Drooby and earn or redeem points, your points will remain active. We'll notify you before your points are about to expire.",
+        "faq7": "Can I transfer points to another user?",
+        "faq7Answer": "Currently, points are non-transferable between accounts. Points are tied to your account and cannot be shared or transferred to other users.",
+        "faq8": "How accurate are the price comparisons?",
+        "faq8Answer": "We strive to provide the most accurate and up-to-date price information. Our system regularly updates prices from partner stores. However, prices may change quickly, so we recommend verifying the final price on the retailer's website before making a purchase.",
+        "faq9": "Can I purchase directly through Drooby?",
+        "faq9Answer": "Drooby is a comparison platform that redirects you to the retailer's website to complete your purchase. We don't process payments directly, but we track your purchases to ensure you receive your points and cashback.",
+        "faq10": "How does the AI chat comparison work?",
+        "faq10Answer": "Our AI chat feature allows you to ask questions about products, compare options, and get personalized recommendations. Simply type your question, and our AI will provide detailed comparisons and suggestions based on your preferences.",
+        "faq11": "How do I use coupons?",
+        "faq11Answer": "You can find available coupons in the Coupons section. Click on a coupon to view its details and terms. When you're ready to use it, click 'Apply' and you'll be redirected to the store with the coupon code automatically applied.",
+        "faq12": "Can I use multiple coupons on one purchase?",
+        "faq12Answer": "This depends on the store's policy. Some stores allow stacking multiple coupons, while others only accept one coupon per transaction. Check the coupon terms and conditions for specific details.",
+        "faq13": "What if my coupon doesn't work?",
+        "faq13Answer": "If a coupon doesn't work, please check that it hasn't expired, meets the minimum purchase requirement, and is valid for the items in your cart. If the issue persists, contact our support team for assistance.",
+        "faq14": "Is my personal information secure?",
+        "faq14Answer": "Yes, we take your privacy and security seriously. We use industry-standard encryption and security measures to protect your data. For more details, please review our Privacy & Security Policy in your profile settings.",
+        "faq15": "How do I delete my account?",
+        "faq15Answer": "To delete your account, go to Profile > Privacy & Security, and you'll find the option to delete your account. Please note that this action is permanent and cannot be undone. All your data, points, and purchase history will be deleted.",
+        "faq16": "Can I change my registered email or phone number?",
+        "faq16Answer": "Yes, you can update your email and phone number in your Profile settings. Go to Profile > Account settings to make these changes. You may need to verify your new email or phone number for security purposes.",
+        "stillNeedHelp": "Still need help?",
+        "stillNeedHelpDesc": "Our support team is here to assist you.",
+        "contactLiveChat": "Live Chat",
+        "contactLiveChatDesc": "Chat with our support team",
+        "contactLiveChatAction": "Start Chat",
+        "contactEmail": "Email Support",
+        "contactEmailDesc": "support@drooby.com",
+        "contactEmailAction": "Send Email",
+        "contactPhone": "Phone Support",
+        "contactPhoneDesc": "+966 XX XXX XXXX",
+        "contactPhoneAction": "Call Now"
+    },
+    "SupportChat": {
+        "title": "Support Chat",
+        "back": "Back",
+        "agentName": "Sarah",
+        "online": "Online",
+        "welcomeMessage": "Hi! I'm Sarah from Drooby Support. How can I help you today?",
+        "quickActions": "Quick actions",
+        "quickActionTrackOrder": "Track my order",
+        "quickActionCashbackIssue": "Issue with cashback",
+        "quickActionCouponNotWorking": "Coupon not working",
+        "quickActionStoreInquiry": "Store inquiry",
+        "infoBanner": "Support has access to your order history and preferences",
+        "inputPlaceholder": "Type your message...",
+        "attachFile": "Attach file",
+        "send": "Send"
+    },
+    "Notifications": {
+        "title": "Notifications",
+        "back": "Back",
+        "unread": "unread",
+        "settings": "Settings",
+        "markAllAsRead": "Mark All as Read",
+        "filterAll": "All",
+        "filterPriceDrops": "Price Drops",
+        "filterStock": "Stock",
+        "filterCashback": "Cashback",
+        "filterCoupons": "Coupons",
+        "noNotifications": "No notifications found",
+        "atStore": "at",
+        "code": "Code"
     }
 }
