add setting page

--- a/app/shared/localization/messages/ar.json
+++ b/app/shared/localization/messages/ar.json
@@ -195,5 +195,37 @@
         "noNotifications": "لا توجد تنبيهات",
         "atStore": "في",
         "code": "الكود"
+    },
+    "AppSettings": {
+        "title": "إعدادات التطبيق",
+        "back": "رجوع",
+        "subtitle": "خصص تجربة دروبي الخاصة بك",
+        "appearance": "المظهر",
+        "theme": "المظهر",
+        "themeDescription": "اختر نظام الألوان المفضل لديك",
+        "light": "فاتح",
+        "lightDescription": "واجهة نظيفة ومشرقة",
+        "dark": "داكن",
+        "darkDescription": "مريح للعين في الليل",
+        "languageRegion": "اللغة والمنطقة",
+        "language": "اللغة",
+        "languageDescription": "اختر لغتك المفضلة",
+        "english": "الإنجليزية",
+        "arabic": "العربية",
+        "currency": "العملة",
+        "currencyDescription": "اختر العملة المفضلة للأسعار",
+        "defaultLocation": "الموقع الافتراضي",
+        "defaultLocationDescription": "حدد منطقة التسوق الافتراضية",
+        "notifications": "التنبيهات",
+        "pushNotifications": "التنبيهات الفورية",
+        "pushNotificationsDescription": "تلقي إشعارات حول العروض والتحديثات",
+        "emailNotifications": "إشعارات البريد الإلكتروني",
+        "emailNotificationsDescription": "احصل على التحديثات والعروض عبر البريد الإلكتروني",
+        "priceDropAlerts": "تنبيهات انخفاض الأسعار",
+        "priceDropAlertsDescription": "احصل على إشعار عند انخفاض أسعار عناصر قائمة الأمنيات",
+        "resetToDefault": "إعادة التعيين إلى الافتراضي",
+        "saveChanges": "حفظ التغييرات",
+        "saudiRiyal": "الريال السعودي (المملكة العربية السعودية)",
+        "riyadh": "الرياض، المملكة العربية السعودية"
     }
 }
