--- a/app/shared/localization/messages/en.json
+++ b/app/shared/localization/messages/en.json
@@ -195,5 +195,37 @@
         "noNotifications": "No notifications found",
         "atStore": "at",
         "code": "Code"
+    },
+    "AppSettings": {
+        "title": "App Settings",
+        "back": "Back",
+        "subtitle": "Customize your Drooby experience",
+        "appearance": "Appearance",
+        "theme": "Theme",
+        "themeDescription": "Choose your preferred color scheme",
+        "light": "Light",
+        "lightDescription": "Clean and bright interface",
+        "dark": "Dark",
+        "darkDescription": "Easy on the eyes at night",
+        "languageRegion": "Language & Region",
+        "language": "Language",
+        "languageDescription": "Select your preferred language",
+        "english": "English",
+        "arabic": "Arabic",
+        "currency": "Currency",
+        "currencyDescription": "Choose your preferred currency for prices",
+        "defaultLocation": "Default Location",
+        "defaultLocationDescription": "Set your default shopping region",
+        "notifications": "Notifications",
+        "pushNotifications": "Push Notifications",
+        "pushNotificationsDescription": "Receive notifications about deals and updates",
+        "emailNotifications": "Email Notifications",
+        "emailNotificationsDescription": "Get updates and offers via email",
+        "priceDropAlerts": "Price Drop Alerts",
+        "priceDropAlertsDescription": "Get notified when prices drop on wishlist items",
+        "resetToDefault": "Reset to Default",
+        "saveChanges": "Save Changes",
+        "saudiRiyal": "Saudi Riyal (Saudi Arabia)",
+        "riyadh": "Riyadh, Saudi Arabia"
     }
 }
